Revert "VTD-14 Change:migrate to java 21"
This reverts commit 4aa43d88a7e7bc8b494126ad759f03c6e9902812.